# StanleyCupPredictions

./: CNAME  README.md  data-preprocessing.ipynb  index.html  pyproject.toml  requirements.txt  team_stats.csv
data/: categorical_teams_set.csv  categorical_teams_set_cup.csv  encoded_variables.csv  full_csv.csv  new_encoded_variables.csv  playoffs.csv  regular_season.csv  regular_season_clean.csv  regular_season_games.csv  stanley_cup.csv  stanley_cup_encoded_variables.csv  team_stats.csv  team_stats_clean.csv  team_stats_updated.csv
data/teams/: team_stats_2022.csv  team_stats_20230321.csv
images/before_after_stacking.collagefactoryfree/Folder/: Untitled.collagefactoryfree
notebooks/: away_finalized_stacked_model.sav  eda.ipynb  etl.ipynb  home_finalized_stacked_model.sav  model.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb  model-checkpoint.ipynb
src/: app.py  model.py
src/notebooks/: away_finalized_stacked_model.sav  eda_and_feature_selection.ipynb  etl.ipynb  home_finalized_stacked_model.sav  model.ipynb  stanley_cup_prediction.ipynb
src/notebooks/.ipynb_checkpoints/: eda_and_feature_selection-checkpoint.ipynb  etl-checkpoint.ipynb  model-checkpoint.ipynb  stanley_cup_prediction-checkpoint.ipynb
src/scripts/: connectors.py  nhl_data_schema.sql  preprocessing.py  snowflake_etl.py  snowflake_transfer.py
src/utils/: constants.py  nhl_data_schema.sql
