[tool.poetry]
name = "stanley-cup-predictions"
version = "0.1.0"
description = "2022 NHL Stanley Cup Analysis and Predictions"
authors = ["RyanSchraeder <rschraeder2@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
keras = "^2.9.0"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
scipy = "^1.8.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
